--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,5 @@
-<header class="flex justify-between items-center py-3 w-[1120px]">
-  <img
-    class="rounded-full w-12 h-12"
-    src="https://media.licdn.com/dms/image/D4D03AQGETkvYZkCLUg/profile-displayphoto-shrink_200_200/0/1705148759885?e=2147483647&v=beta&t=mhjcQ48U9ZXZTfi9bBNU0SDyblDFKlVp1jgBwYyWPus"
-    alt="raul garrigos photo"
-  />
+<header class="flex justify-center items-center py-5 w-[1120px] mx-auto">
+  <span></span>
 
   <nav class="flex flex-row gap-x-10 opacity-80">
     <a href="/">Home</a>
