--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ const { title } = Astro.props;
     background-color: #050505;
     color: white;
     display: flex;
-    justify-content: center;
-    min-height: 100vh;
+    flex-direction: column;
+    height: 100vh;
   }
 </style>
