--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import LinkedInIcon from "../components/icons/LinkedIn.astro";
 import GitHubIcon from "../components/icons/GitHub.astro";
 import MailIcon from "../components/icons/Mail.astro";
 import SocialPill from "../components/SocialPill.astro";
+import Experience from "../components/Experience.astro";
 ---
 
 <Layout
@@ -53,6 +54,9 @@ import SocialPill from "../components/SocialPill.astro";
           raul.garrigos91@gmail.com
         </SocialPill>
       </nav>
+    </section>
+    <section>
+      <Experience />
     </section>
   </main>
 </Layout>
