--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,23 @@
-<footer class="py-20">Aquí va el footer</footer>
+<footer
+  class="rounded-lg shadow m-4 bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10"
+>
+  <div
+    class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+  >
+    <span class="text-sm text-yellow-100 sm:text-center dark:text-gray-400"
+      >© 2024 <a href="https://github.com/raulgarrigos" class="hover:underline"
+        >Raül Garrigós</a
+      >. All Rights Reserved.
+    </span>
+    <ul
+      class="flex flex-wrap items-center mt-3 text-sm font-medium text-white/90- dark:text-gray-400 sm:mt-0"
+    >
+      <li>
+        <a href="#sobre-mi" class="hover:underline me-4 md:me-6">About</a>
+      </li>
+      <li>
+        <a href="#" class="hover:underline">Contact</a>
+      </li>
+    </ul>
+  </div>
+</footer>
