about me in progress

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@
     <a href="#top">Inicio</a>
     <a href="#proyectos">Proyectos</a>
     <a href="#experiencia">Experiencia</a>
-    <a href='#sobre-mi"'>Sobre mí</a>
+    <a href="#sobre-mí">Sobre mí</a>
     <a href='#contacto"'>Contacto</a>
   </nav>
 </header>
