--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "@fontsource-variable/onest";
+
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
@@ -12,7 +13,7 @@ const { title, description } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
@@ -48,6 +49,7 @@ const { title, description } = Astro.props;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overscroll-behavior: none;
   }
 
   @media (prefers-reduced-motion: reduce) {
