--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,6 +7,7 @@ import React from "./icons/React.astro";
 import MongoDB from "./icons/MongoDB.astro";
 import NodeJS from "./icons/NodeJS.astro";
 import TailwindCSS from "./icons/TailwindCSS.astro";
+import Badge from "./Badge.astro";
 
 const tags = {
   HTML: {
@@ -91,8 +92,8 @@ const projects = [
 ---
 
 {
-  projects.map(({ title, description, tags, image }) => (
-    <article>
+  projects.map(({ title, description, tags, image, link, github }) => (
+    <article class="mb-10">
       <h3 class="text-2xl font-semibold text-yellow-200 mb-2">{title}</h3>
       <p class="text-lg mb-4 text-pretty">{description}</p>
       <ul class="flex gap-x-3 flex-row">
@@ -107,11 +108,21 @@ const projects = [
           </li>
         ))}
       </ul>
-      <img
-        class="rounded shadow-2xl shadow-white/10 mt-5 mb-10"
-        src={image}
-        alt={`Captura de pantalla del proyecto ${title}`}
-      />
+      <a href={link} target="_blank" rel="noopener noreferrer">
+        <img
+          class="rounded shadow-2xl shadow-white/10 mt-5 mb-2"
+          src={image}
+          alt={`Captura de pantalla del proyecto ${title}`}
+        />
+      </a>
+      <a
+        class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+        href={github}
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+      GitHub
+      </a>
     </article>
   ))
 }
