improving badge and spaces

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -6,7 +6,7 @@ const personalImageAlt = "Raül Garrigós";
   class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
 >
   <div
-    class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
+    class="text-white text-pretty order-2 md:order-1"
   >
     <p>
       ¡Soy Raül! Estudié Periodismo y Fotografía Artística y, tras años
@@ -15,9 +15,9 @@ const personalImageAlt = "Raül Garrigós";
         >Desde entonces disfruto creando experiencias web para los usuarios.
       </span>
     </p>
-
+    <br/>
     <p>Otro párrafo</p>
-
+    <br/>
     <p>Otro párrafo</p>
   </div>
 
