--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,35 +5,36 @@ const experience = [
   {
     date: "Octubre 2023 - Diciembre 2023",
     title: "FullStack Web Development",
-    business: "Ironhack",
+    company: "Ironhack",
     description:
       "Bootcamp intensivo de 9 semanas (+400h). Completados 3 proyectos en JavaScript con el objetivo final de realizar una web app con MongoDB, Express, ReactJS y NodeJs. ",
+    link: "https://open.spotify.com/intl-es/artist/04LW73s0C1fhu5KezxtXtt"
   },
   {
     date: "Marzo 2021 - Septiembre 2023",
     title: "Catalog Specialist",
-    business: "Promofarma",
+    company: "Promofarma",
     description:
       "Gestión del catálogo web para un e-commerce de productos parafarmacéuticos, incluyendo la revisión de nombres, categorías, imágenes, así como la incorporación de catálogos externos.",
   },
   {
     date: "Septiembre 2020 - Febrero 2021",
     title: "Content Marketing Manager",
-    business: "ErsaxTrade",
+    company: "ErsaxTrade",
     description:
       "Gestión del contenido de tres marcas diferentes para una misma empresa, incluyendo contenido web SEO-driven, blog, marketing e-mails, presentaciones a potenciales clientes (B2B).",
   },
   {
     date: "Junio 2019 - Septiembre 2020",
     title: "Affiliates Catalog Editor",
-    business: "Drinks&Co",
+    company: "Drinks&Co",
     description:
       "Gestión del catálogo web para un e-commerce de productos alcohólicos. Revisión de feeds y creación de reglas RegEx para implementar cambios masivos. Trabajo codo a codo con el tech team.",
   },
   {
     date: "Agosto 2017 - Mayo 2019",
     title: "Content Specialist",
-    business: "MediaMarkt",
+    company: "MediaMarkt",
     description:
       "Creación de fichas de producto para la página web. Mejora del SEO de los productos. Definir KPIs para analizar la calidad de la página. Migración de todo el contenido a la plataforma alemana (PEx).",
   },
