--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,13 +1,15 @@
 ---
+import LinkInLine from "LinkInLine.astro"
+
 interface Props {
   title: string;
   description: string;
-  business: string;
+  company: string;
   link?: string;
   date: string;
   isLatest: boolean;
 }
-const { title, description, link, business, date, isLatest } = Astro.props;
+const { title, description, link, company, date, isLatest } = Astro.props;
 ---
 
 <span
@@ -41,7 +43,7 @@ const { title, description, link, business, date, isLatest } = Astro.props;
     )
   } -->
   <h3 class="text-sm text-red-200/80 mb-2">
-    {business}
+    {company}
   </h3>
 </h3>
 <p class="mb-4 text-base font-normal text-gray-200 text-pretty">
@@ -49,26 +51,25 @@ const { title, description, link, business, date, isLatest } = Astro.props;
 </p>
 {
   link && (
-    <a
-      href={link}
-      class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"
-    >
+    <LinkInLine href={link}>
       Saber más{" "}
       <svg
-        class="w-3 h-3 ms-2 rtl:rotate-180"
-        aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
+        class="w-5 icon icon-tabler icon-tabler-chevron-right"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
         fill="none"
-        viewBox="0 0 14 10"
+        stroke-linecap="round"
+        stroke-linejoin="round"
       >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M1 5h12m0 0L9 1m4 4L9 9"
-        />
+        <>
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M9 6l6 6l-6 6" />
+        </>
       </svg>
-    </a>
+    </LinkInLine>
   )
 }
