--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,11 +23,11 @@ const { title, description } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <div
-      class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"
-    >
+    <div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
+
+      
     </div>
-    <Header />
+     <Header />
     <slot />
     <Footer />
   </body>
