--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -16,7 +16,7 @@ const { title, description, link, company, date, isLatest } = Astro.props;
   class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900"
 >
   <svg
-    class="w-2.5 h-2.5 text-blue-800 dark:text-blue-300"
+    class="w-2.5 h-2.5 text-purple-800 dark:text-purple-300"
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
     fill="currentColor"
