--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,22 +1,27 @@
+---
+const currentYear = new Date().getFullYear()
+---
+
 <footer
-  class="rounded-lg shadow m-4 bg-black/20 backdrop-blur-lg w-full xl:w-[1120px] mx-auto mb-10"
+  class="opacity-80 m-4 mt-16 w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center"
 >
   <div
-    class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+    class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
   >
-    <span class="text-sm text-yellow-100 sm:text-center dark:text-gray-400"
-      >© 2024 <a href="https://github.com/raulgarrigos" class="hover:underline"
-        >Raül Garrigós</a
-      >. All Rights Reserved.
+    <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
+      >© {currentYear}
+      <a href="https://midu.dev/" class="hover:underline">Raül Garrigós</a>.
     </span>
     <ul
-      class="flex flex-wrap items-center mt-3 text-sm font-medium text-white/90- dark:text-gray-400 sm:mt-0"
+      class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
       <li>
-        <a href="#sobre-mi" class="hover:underline me-4 md:me-6">About</a>
+        <a href="/#sobre-mí" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
-        <a href="#" class="hover:underline">Contact</a>
+        <a id="contacto" href="mailto:raul.garrigos91@gmail.com" class="hover:underline"
+          >Contacto</a
+        >
       </li>
     </ul>
   </div>
