changes in header sizes and colors

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,7 +84,7 @@ import AboutMe from "../components/AboutMe.astro";
         <Experience />
       </SectionContainer>
   
-      <SectionContainer id="sobre-mí">
+      <SectionContainer id="sobre-mi">
         <h2
         class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
       >
