--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,13 +10,13 @@ const currentYear = new Date().getFullYear()
   >
     <span class="text-sm sm:text-center text-zinc-700/90 dark:text-zinc-200/90"
       >© {currentYear}
-      <a href="https://midu.dev/" class="hover:underline">Raül Garrigós</a>.
+      <a href="https://github.com/raulgarrigos" class="hover:underline">Raül Garrigós</a>.
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
       <li>
-        <a href="/#sobre-mí" class="hover:underline me-4 md:me-6">Sobre mí</a>
+        <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
         <a id="contacto" href="mailto:raul.garrigos91@gmail.com" class="hover:underline"
