--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,43 @@
+---
+const navItems = [
+  {
+    title: "Proyectos",
+    label: "proyectos",
+    url: "/#proyectos",
+  },
+  {
+    title: "Experiencia",
+    label: "experiencia",
+    url: "/#experiencia",
+  },
+  {
+    title: "Sobre mí",
+    label: "sobre-mi",
+    url: "/#sobre-mi",
+  },
+  {
+    title: "Contacto",
+    label: "contacto",
+    url: "mailto:raul.garrigos91@gmail.com",
+  },
+]
+---
 <header
-  class="flex justify-center items-center py-5 w-full xl:w-[1120px] mx-auto"
+  class="fixed top-0 z-10 bg-[#44229D]  flex items-center justify-center w-full mx-auto p-2"
 >
-  <nav class="flex flex-row gap-x-10 opacity-80">
-    <a href="#top">Inicio</a>
-    <a href="#proyectos">Proyectos</a>
-    <a href="#experiencia">Experiencia</a>
-    <a href="#sobre-mí">Sobre mí</a>
-    <a href='#contacto"'>Contacto</a>
+  <nav
+    class="flex px-3 text-lg font-medium rounded-full text-white-600 dark:text-gray-200 justify-center items-center"
+  >
+    {
+      navItems.map((link) => (
+        <a
+          class="relative block px-2 py-2 transition hover:text-[#FFD700]"
+          aria-label={link.label}
+          href={link.url}
+        >
+          {link.title}
+        </a>
+      ))
+    }
   </nav>
 </header>
