--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -11,14 +11,19 @@ const personalImageAlt = "Raül Garrigós";
     <p>
       ¡Soy Raül! Estudié Periodismo y Fotografía Artística y, tras años
       ejerciendo como Content y Catalog Specialist en diferentes e-commerces, me
-      pasé al mundo de la Programación. <span class="text-yellow-200/90"
-        >Desde entonces disfruto creando experiencias web para los usuarios.
+      pasé al mundo de la Programación Web. <span class="text-yellow-200/90"
+        > Mi camino es una fusión perfecta entre tecnología y creatividad.
       </span>
     </p>
     <br/>
-    <p>Otro párrafo</p>
+    <p>Tengo experiencia programando con <span class="text-yellow-200/90"
+      >JavaScript (ES6)  </span>, construyendo interfaces dinámicas con <span class="text-yellow-200/90"
+      >React  </span> y desarrollando servidores con <span class="text-yellow-200/90"
+      >NodeJS y Express  </span>. También he trabajado con bases de dato NoSQL como <span class="text-yellow-200/90"
+      >MongoDB  </span>. Pero tengo ganas de seguir ampliando mis conocimientos tanto en lenguajes como en tecnologías.</p>
     <br/>
-    <p>Otro párrafo</p>
+    <p>Actualmente, estoy puliendo mis habilidades de programación dedicándome a proyectos personales mientras busco oportunidades como Developer. <span class="text-yellow-200/90"
+      >Siempre preparado para el próximo reto.</span></p>
   </div>
 
   <img
