--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,31 +5,42 @@ const personalImageAlt = "Raül Garrigós";
 <article
   class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
 >
-  <div
-    class="text-white text-pretty order-2 md:order-1"
-  >
+  <div class="text-white text-pretty order-2 md:order-1">
     <p>
       ¡Soy Raül! Estudié Periodismo y Fotografía Artística y, tras años
       ejerciendo como Content y Catalog Specialist en diferentes e-commerces, me
-      pasé al mundo de la Programación Web. <span class="text-yellow-200/90"
-        > Mi camino es una fusión perfecta entre tecnología y creatividad.
+      pasé al mundo de la Programación Web. <span class="text-yellow-200/90">
+        Mi camino es una fusión perfecta entre tecnología y creatividad.
       </span>
     </p>
-    <br/>
-    <p>Tengo experiencia programando con <span class="text-yellow-200/90"
-      >JavaScript (ES6)  </span>, construyendo interfaces dinámicas con <span class="text-yellow-200/90"
-      >React  </span> y desarrollando servidores con <span class="text-yellow-200/90"
-      >NodeJS y Express  </span>. También he trabajado con bases de dato NoSQL como <span class="text-yellow-200/90"
-      >MongoDB  </span>. Pero tengo ganas de seguir ampliando mis conocimientos tanto en lenguajes como en tecnologías.</p>
-    <br/>
-    <p>Actualmente, estoy puliendo mis habilidades de programación dedicándome a proyectos personales mientras busco oportunidades como Developer. <span class="text-yellow-200/90"
-      >Siempre preparado para el próximo reto.</span></p>
+    <br />
+    <p>
+      Tengo experiencia programando con <span class="text-yellow-200/90"
+        >JavaScript (ES6)
+      </span>, construyendo interfaces dinámicas con <span
+        class="text-yellow-200/90"
+        >React
+      </span> y desarrollando servidores con <span class="text-yellow-200/90"
+        >NodeJS y Express
+      </span>. También he trabajado con bases de dato NoSQL como <span
+        class="text-yellow-200/90"
+        >MongoDB
+      </span>. Pero tengo ganas de seguir ampliando mis conocimientos tanto en
+      lenguajes como en tecnologías.
+    </p>
+    <br />
+    <p>
+      Actualmente, estoy puliendo mis habilidades de programación dedicándome a
+      proyectos personales mientras busco oportunidades como Developer. <span
+        class="text-yellow-200/90"
+        >Siempre preparado para el próximo reto.</span>
+    </p>
   </div>
 
   <img
     width="200"
     height="200"
-    src="https://media.licdn.com/dms/image/D4D03AQGETkvYZkCLUg/profile-displayphoto-shrink_200_200/0/1705148759885?e=2147483647&v=beta&t=mhjcQ48U9ZXZTfi9bBNU0SDyblDFKlVp1jgBwYyWPus"
+    src="raulgarrigos.webp"
     alt={personalImageAlt}
     class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
     style="object-position: 50% 50%"
