--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-import Badge from "../components/Badge.astro";
-import LinkedInIcon from "../components/icons/LinkedIn.astro";
-import GitHubIcon from "../components/icons/GitHub.astro";
-import MailIcon from "../components/icons/Mail.astro";
-import SocialPill from "../components/SocialPill.astro";
 import Experience from "../components/Experience.astro";
 import SectionContainer from "../components/SectionContainer.astro";
 import Briefcase from "../components/icons/Briefcase.astro";
 import CodeIcon from "../components/icons/Code.astro";
 import Projects from "../components/Projects.astro";
 import AboutMe from "../components/AboutMe.astro";
+import Hero from "../components/Hero.astro";
 ---
 
 <Layout
@@ -20,74 +16,35 @@ import AboutMe from "../components/AboutMe.astro";
   ,
 >
   <main class="px-4">
-    <SectionContainer class="py-44 pb-32">
-      <img
-        class="rounded-full size-12 mb-4"
-        src="https://media.licdn.com/dms/image/D4D03AQGETkvYZkCLUg/profile-displayphoto-shrink_200_200/0/1705148759885?e=2147483647&v=beta&t=mhjcQ48U9ZXZTfi9bBNU0SDyblDFKlVp1jgBwYyWPus"
-        alt="raul garrigos photo"
-      />
-      <h1
-        class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
-      >
-        Hola, soy Raül <a
-          href="https://www.linkedin.com/in/raul-garrigos/"
-          target="_blank"
-          rel="noopener"
-          class="flex justify-center items-center"
-        >
-          <Badge>Available for hire</Badge>
-        </a>
-      </h1>
-      <h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
-        <span>+7 años de experiencia como Content y Catalog Specialist.</span
-        ><span class="text-yellow-200/90">
-          Un día decidí cambiar de rumbo y estudiar Desarrollo Web.
-        </span>
-        <span class="text-red-200/90"> De Barcelona.</span>
-        <span class="opacity-75">Buscando mi primera oportunidad.</span>
-      </h2>
-
-      <nav class="flex gap-4 mt-8 flex-wrap">
-        <SocialPill href="https://www.linkedin.com/in/raul-garrigos/">
-          <LinkedInIcon class="size-4 md:size-6" />
-          LinkedIn
-        </SocialPill>
-        <SocialPill href="https://github.com/raulgarrigos">
-          <GitHubIcon class="size-4 md:size-6" />
-          GitHub
-        </SocialPill>
-        <SocialPill href="mailto:raul.garrigos91@gmail.com">
-          <MailIcon class="size-4 md:size-6" />
-          raul.garrigos91@gmail.com
-        </SocialPill>
-      </nav>
+    <SectionContainer class="mt-5 py-16 md:py-36">
+      <Hero />
     </SectionContainer>
 
     <div class="space-y-24">
       <SectionContainer id="proyectos">
         <h2
-        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
-      >
+          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
+        >
           <CodeIcon class="size-7" />
           Proyectos
         </h2>
         <Projects />
       </SectionContainer>
-  
+
       <SectionContainer id="experiencia">
         <h2
-        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
-      >
+          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
+        >
           <Briefcase class="size-7" />
           Experiencia laboral
         </h2>
         <Experience />
       </SectionContainer>
-  
+
       <SectionContainer id="sobre-mi">
         <h2
-        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
-      >
+          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
+        >
           <Briefcase class="size-7" />
           Sobre mí
         </h2>
