trying to put background good

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,39 +22,33 @@ const { title, description } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
-
-      
+  <body class="relative">
+    <div
+      class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"
+    >
     </div>
-     <Header />
-    <slot />
-    <Footer />
   </body>
-</html>
+  <Header />
+  <slot />
+  <Footer />
 
-<style is:global>
-  :root {
-    color-scheme: light dark;
-  }
-
-  html {
-    font-family: "Onest Variable", system-ui, sans-serif;
-    scroll-behavior: smooth;
-  }
-
-  body {
-    background-color: #050505;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    overscroll-behavior: none;
-  }
-
-  @media (prefers-reduced-motion: reduce) {
-    html {
-      scroll-behavior: auto;
+  <style is:global>
+    :root {
+      color-scheme: light dark;
     }
-  }
-</style>
+
+    html {
+      font-family: "Onest Variable", system-ui, sans-serif;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      background-color: black;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      overscroll-behavior: none;
+    }
+  </style>
+</html>
