--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,33 +22,32 @@ const { title, description } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="relative">
+  <body>
     <div
-      class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"
+      class="fixed inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"
     >
     </div>
+    <Header />
+    <slot />
+    <Footer />
+
+    <style is:global>
+      :root {
+        color-scheme: light dark;
+      }
+
+      html {
+        font-family: "Onest Variable", system-ui, sans-serif;
+        scroll-behavior: smooth;
+      }
+
+      body {
+        color: white;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        overscroll-behavior: none;
+      }
+    </style>
   </body>
-  <Header />
-  <slot />
-  <Footer />
-
-  <style is:global>
-    :root {
-      color-scheme: light dark;
-    }
-
-    html {
-      font-family: "Onest Variable", system-ui, sans-serif;
-      scroll-behavior: smooth;
-    }
-
-    body {
-      background-color: black;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      overscroll-behavior: none;
-    }
-  </style>
 </html>
