--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-const currentYear = new Date().getFullYear()
+const currentYear = new Date().getFullYear();
 ---
 
 <footer
@@ -8,9 +8,11 @@ const currentYear = new Date().getFullYear()
   <div
     class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
   >
-    <span class="text-sm sm:text-center text-zinc-700/90 dark:text-zinc-200/90"
+    <span class="text-sm sm:text-center text-yellow-200 dark:text-zinc-200/90"
       >© {currentYear}
-      <a href="https://github.com/raulgarrigos" class="hover:underline">Raül Garrigós</a>.
+      <a href="https://github.com/raulgarrigos" class="hover:underline"
+        >Raül Garrigós</a
+      >
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
@@ -19,8 +21,10 @@ const currentYear = new Date().getFullYear()
         <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
-        <a id="contacto" href="mailto:raul.garrigos91@gmail.com" class="hover:underline"
-          >Contacto</a
+        <a
+          id="contacto"
+          href="mailto:raul.garrigos91@gmail.com"
+          class="hover:underline">Contacto</a
         >
       </li>
     </ul>
