--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,7 +3,7 @@ const personalImageAlt = "Raül Garrigós";
 ---
 
 <article
-  class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row"
+  class="flex flex-col items-center justify-center gap-8 text-gray-700 md:flex-row"
 >
   <div class="text-white text-pretty order-2 md:order-1">
     <p>
@@ -22,7 +22,7 @@ const personalImageAlt = "Raül Garrigós";
         >React
       </span> y desarrollando servidores con <span class="text-yellow-200/90"
         >NodeJS y Express
-      </span>. También he trabajado con bases de dato NoSQL como <span
+      </span>. También he trabajado con bases de datos NoSQL como <span
         class="text-yellow-200/90"
         >MongoDB
       </span>. Pero tengo ganas de seguir ampliando mis conocimientos tanto en
@@ -32,8 +32,8 @@ const personalImageAlt = "Raül Garrigós";
     <p>
       Actualmente, estoy puliendo mis habilidades de programación dedicándome a
       proyectos personales mientras busco oportunidades como Developer. <span
-        class="text-yellow-200/90"
-        >Siempre preparado para el próximo reto.</span>
+        class="text-yellow-200/90">Siempre preparado para el próximo reto.</span
+      >
     </p>
   </div>
 
@@ -42,7 +42,7 @@ const personalImageAlt = "Raül Garrigós";
     height="200"
     src="raulgarrigos.webp"
     alt={personalImageAlt}
-    class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
+    class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 ring-1 ring-black/7"
     style="object-position: 50% 50%"
   />
 </article>
