--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,5 +1,5 @@
 <div
-  class="inline-flex items-center justify-center w-full px-3 py-1 text-sm text-green-800 bg-green-100 rounded-full cursor-pointer dark:bg-gray-800 dark:text-white/80 whitespace-nowrap"
+  class="inline-flex items-center justify-center w-full px-3 py-1 text-sm text-green-800 bg-green-100 rounded-full cursor-pointer whitespace-nowrap"
 >
   <slot />
 </div>
