--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -40,7 +40,7 @@ const experience = [
 ];
 ---
 
-<ol class="relative border-s border-gray-200 ml-3 px-2 dark:border-gray-700">
+<ol class="relative border-s border-gray-200 ml-3 px-2">
   {
     experience.map((experience, index) => (
       <li class="mb-10 ms-6">
