--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,9 +10,7 @@ import SocialPill from "../components/SocialPill.astro";
 <div class="flex gap-4">
   <div class="max-w-xl">
     <div class="flex items-center mb-4">
-      <h1
-        class="text-2xl font-bold tracking-tight mb-2 text-white sm:text-4xl dark:text-white"
-      >
+      <h1 class="text-2xl font-bold tracking-tight mb-2 text-white sm:text-4xl">
         Hola, soy Raül
       </h1>
       <a
@@ -25,13 +23,13 @@ import SocialPill from "../components/SocialPill.astro";
       </a>
     </div>
     <h2 class="text-xl sm:text-2xl text-yellow-100/80">FullStack Developer</h2>
-    <p
-      class="mt-4 text-lg sm:text-xl text-gray-400 dark:[&>strong]:text-yellow-100 [&>strong]:text-yellow-300 [&>strong]:font-semibold dark:text-gray-300"
-    >
+    <p class="mt-4 text-lg sm:text-xl text-gray-400">
       +7 años de experiencia como Content y Catalog Specialist. Un día decidí
-      cambiar de rumbo y me embarqué en el Desarrollo Web. <strong>
+      cambiar de rumbo y me embarqué en el Desarrollo Web. <span
+        class="text-yellow-300/90"
+      >
         Especializado en crear aplicaciones web desde cero.
-      </strong> De Barcelona.
+      </span> De Barcelona.
     </p>
 
     <nav class="flex gap-4 mt-8 flex-wrap">
