--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -116,12 +116,12 @@ const projects = [
         />
       </a>
       <a
-        class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+        class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded"
         href={github}
         target="_blank"
         rel="noopener noreferrer"
       >
-      GitHub
+        GitHub
       </a>
     </article>
   ))
