--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Hero from "../components/Hero.astro";
     <div class="space-y-24">
       <SectionContainer id="proyectos">
         <h2
-          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
+          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white"
         >
           <CodeIcon class="size-7" />
           Proyectos
@@ -33,7 +33,7 @@ import Hero from "../components/Hero.astro";
 
       <SectionContainer id="experiencia">
         <h2
-          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
+          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white"
         >
           <Briefcase class="size-7" />
           Experiencia laboral
@@ -43,7 +43,7 @@ import Hero from "../components/Hero.astro";
 
       <SectionContainer id="sobre-mi">
         <h2
-          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white/80 dark:text-white"
+          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white"
         >
           <Briefcase class="size-7" />
           Sobre mí
