--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,15 +8,13 @@ const currentYear = new Date().getFullYear();
   <div
     class="rounded-lg w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between py-4"
   >
-    <span class="text-sm sm:text-center text-yellow-200 dark:text-zinc-200/90"
+    <span class="text-sm sm:text-center text-yellow-200"
       >© {currentYear}
       <a href="https://github.com/raulgarrigos" class="hover:underline"
         >Raül Garrigós</a
       >
     </span>
-    <ul
-      class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
-    >
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium sm:mt-0">
       <li>
         <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
