--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,13 +20,14 @@ const navItems = [
     label: "contacto",
     url: "mailto:raul.garrigos91@gmail.com",
   },
-]
+];
 ---
+
 <header
-  class="fixed top-0 z-10 bg-[#44229D]  flex items-center justify-center w-full mx-auto p-2"
+  class="fixed top-0 z-10 bg-[#44229D] flex items-center justify-center w-full mx-auto p-2"
 >
   <nav
-    class="flex px-3 text-lg font-medium rounded-full text-white-600 dark:text-gray-200 justify-center items-center"
+    class="flex px-3 text-lg font-medium rounded-full text-white-600 justify-center items-center"
   >
     {
       navItems.map((link) => (
