Tech stack section WIP

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ const navItems = [
 ---
 
 <header
-  class="fixed top-0 z-10 bg-[#44229D] flex items-center justify-center w-full mx-auto p-2"
+  class="fixed top-0 z-10 bg-[#43229C] flex items-center justify-center w-full mx-auto p-2"
 >
   <nav
     class="flex px-3 text-lg font-medium rounded-full text-white-600 justify-center items-center"
@@ -32,7 +32,7 @@ const navItems = [
     {
       navItems.map((link) => (
         <a
-          class="relative block px-2 py-2 transition hover:text-[#FFD700]"
+          class="relative block px-3 py-2 transition hover:text-[#FFD700]"
           aria-label={link.label}
           href={link.url}
         >
