--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -94,7 +94,7 @@ const projects = [
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
   {
     projects.map(({ title, description, tags, image, link, github }) => (
-      <article class="bg-purple-800/50 rounded shadow-white/10 shadow-xl">
+      <article class="bg-[#43229C]/50 rounded shadow-white/10 shadow-xl">
         <a href={link} target="_blank" rel="noopener noreferrer">
           <img
             class="rounded shadow-2xl shadow-white/10 mb-2"
