--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import CodeIcon from "../components/icons/Code.astro";
 import Projects from "../components/Projects.astro";
 import AboutMe from "../components/AboutMe.astro";
 import Hero from "../components/Hero.astro";
+import Tech from "../components/Techs.astro";
+import Techs from "../components/Techs.astro";
 ---
 
 <Layout
@@ -49,6 +51,15 @@ import Hero from "../components/Hero.astro";
           Sobre mí
         </h2>
         <AboutMe />
+      </SectionContainer>
+
+      <SectionContainer id="tech">
+        <h2
+          class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white"
+        >
+          Tecnologías
+        </h2>
+        <Techs />
       </SectionContainer>
     </div>
   </main>
