--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import CodeIcon from "../components/icons/Code.astro";
 import Projects from "../components/Projects.astro";
 import AboutMe from "../components/AboutMe.astro";
 import Hero from "../components/Hero.astro";
-import Tech from "../components/Techs.astro";
-import Techs from "../components/Techs.astro";
+import Settings from "../components/icons/Settings.astro";
+import Techs from "../components/Stack.astro";
 ---
 
 <Layout
@@ -57,7 +57,8 @@ import Techs from "../components/Techs.astro";
         <h2
           class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-white"
         >
-          Tecnologías
+          <Settings class="size-7" />
+          Stack
         </h2>
         <Techs />
       </SectionContainer>
